--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
     "@sendgrid/mail": "^7.7.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
